# detrend

./: Cargo.toml  README.md
.github/workflows/: build_push.yml
src/: constant.rs  detrend_error.rs  least_squares.rs  lib.rs
